# Quantum_SDK

./: .gitignore  README.md  circuit_schema.json  cleanup_jobs.py  config.py  debug_lines.py  demo_estimator.py  example_circuit.json  fix_syntax.py  mkdocs.yml  noise_analysis.py  pyproject.toml  quantum_circuit_builder copy.py  quantum_circuit_builder.py  qxir_v1 copy 2.json  qxir_v1 copy.json  qxir_v1.json  remove_duplicates.py  requirements-dev.txt  requirements-docs.txt  requirements.txt  restore_main.py  run_batch_demo.py  run_stage3_demo.py  run_stage4_demo.py  run_stage6_demo.py  run_visualization_demo.py  setup.py  streamlit_app.py  test.py  test_circuit_fix.py  test_noise_impact.py  test_result_plotter.py  verify_qxir.py  verify_viz.py  web_app.py
.qx_runs/: 018e983ab7bd012f.json  0a768ca66eea70eb.json  15545b034351052c.json  15af20875ecc4ffa.json  188dade51f0bf7f9.json  1b4f07137ea2cae9.json  1c202d61e4b7014f.json  1c717b987e3d7ce7.json  1f96503ba9f59b56.json  2253f2f706ec425f.json  23b81befd6b5f25c.json  25e44935c5e146ea.json  2704a3c6465d1800.json  28fe8122100f32ed.json  2c1cee08dd8bac60.json  2f7a35d2ad351200.json  3c27788e1ece5931.json  3ea4c42523b5766a.json  444f2befc1810ad8.json  44c1017c925d3c94.json  4c748f02c9be9655.json  4e2bf61fe522d185.json  4fca3dd83ee7bb1c.json  51feb1307dabb484.json  52685ca0bde6f982.json  5bbe24fe0ad36118.json  69e760ac4267eb93.json  6d952f8e61f6adfe.json  7050a2ddb5b8f6ff.json  7819717dd89e9894.json  7859cd1ba5ab14f7.json  7a637ed22699c762.json  7b7866fe46343b9b.json  7c665d0c45b7a2e0.json  7d59065ae359a5d3.json  (+45 more)
docs/: cli.md  (+9 more)
(+139 files in other folders)
