[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qx"
version = "0.0.1"
description = "Vendor-neutral quantum SDK (local demo)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name="Saqib Ali"}]
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = [
	"pytest>=7.0",
	"jsonschema>=4.0",
	"matplotlib>=3.0"
]

[project.scripts]
qx-run = "qx.cli:run_main"
qx-report = "qx.cli:report_main"

[tool.setuptools.packages.find]
where = ["python"]
